World unlinking out of sync with rendered mode in viewport #36725

Closed
opened 2013-09-14 15:38:40 +02:00 by Danny McGrath · 3 comments
Member

%%%--- Operating System, Graphics card ---
Ubuntu 12.04 64bit, GTX 550 Ti

- Blender version with error, and version that worked ---

r60132

- Short description of error ---

Unlinking the world shows black in cycles, but F12 or disable/enable of rendered mode, causes the viewport to show the real .8 whiteish color. Shouldn't cycles only ever show what the world is actually meant to be seeing?

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • Enable cycles rendered mode
  • Unlink default world
  • Cycles shows the world go from grey to black
  • Press F12 to render, or toggle rendered mode off and on once
  • Render/viewport show the world as being white (.8) now

Thomas suggested a patch:

http://www.pasteall.org/45586/diff

I wonder though: does this address the issue properly/fully? Seems to me that cycles be displaying arbitrary world information from it's own magic values, and only use the values that the world returns, or defaults in the case of there being no specific world object.%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.04 64bit, GTX 550 Ti - Blender version with error, and version that worked --- r60132 - Short description of error --- Unlinking the world shows black in cycles, but F12 or disable/enable of rendered mode, causes the viewport to show the real .8 whiteish color. Shouldn't cycles only ever show what the world is actually meant to be seeing? - Steps for others to reproduce the error (preferably based on attached .blend file) --- - Enable cycles rendered mode - Unlink default world - Cycles shows the world go from grey to black - Press F12 to render, or toggle rendered mode off and on once - Render/viewport show the world as being white (.8) now Thomas suggested a patch: ``` http://www.pasteall.org/45586/diff ``` I wonder though: does this address the issue properly/fully? Seems to me that cycles be displaying arbitrary world information from it's own magic values, and only use the values that the world returns, or defaults in the case of there being no specific world object.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36725
No description provided.