Fix #36725: mismatch between viewport and render result when no world is linked to the scene in cycles.